--- a/src/src/App.css
+++ b/src/src/App.css
@@ -36,7 +36,9 @@
     position: relative;
 }
 #sidebar {
+    position: fixed;
     width: 300px;
+    top: 38px;
     background: #EDEDED;
     font-size: 100%;
     height: 100%;
@@ -46,9 +48,16 @@
     max-width: 300px;
 }
 #content {
-    width: 100%;
+    height: 100%;
+    left: 300px;
+    top: 38px;
+    overflow: scroll;
+    position: fixed;
     background: #DDDDDD;
     outline: 0px solid transparent;
-    padding: 15px;
-    margin: 0;
+    padding-left: 10px;
+    border: 1px solid #ccc;
+}
+.hidden {
+  display: none;
 }
