--- a/src/src/App.css
+++ b/src/src/App.css
@@ -2,12 +2,7 @@
   text-align: left;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 35px;
-}
-
-.header {
+.Header {
   background-color: #222;
   color: white;
   width: 100%;
@@ -24,25 +19,26 @@
   font-size: large;
 }
 
+.Editor {
+  position: relative;
+  width: 100%;
+  height: 100%
+}
+
 .Editor .CodeMirror {
   position: absolute;
   width: 100%;
   height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-#container {
+#Container {
     display: flex;
     flex-direction: row;
     top: 36px;
     position: relative;
 }
 
-#sidebar {
+#Sidebar {
     position: fixed;
     width: 300px;
     top: 38px;
@@ -51,11 +47,14 @@
     height: 100%;
     line-height: 0.9;
     overflow-y: scroll;
-    padding-left: 10px;
     max-width: 300px;
 }
 
-#content {
+#Sidebar p {
+  padding-left: 10px;
+}
+
+#Content {
     height: 100%;
     left: 300px;
     top: 38px;
